--- a/style3.css
+++ b/style3.css
@@ -56,7 +56,7 @@ Import css
 ===============================================*/
 
 @import url('https://cdn.statically.io/gh/balibalilla/netflixtheme/main/all.min.css');
-@import url('https://cdn.statically.io/gh/balibalilla/netflixtheme/main/fontawesome.min.css');
+@import url('https://cdn.statically.io/gh/balibalilla/netflixtheme/main/fontawesome.min2.css');
 @import url('https://cdn.statically.io/gh/balibalilla/netflixtheme/main/ionicons.min2.css');
 @import url('https://cdn.statically.io/gh/balibalilla/netflixtheme/main/slick.min.css');
 @import url('https://cdn.statically.io/gh/balibalilla/netflixtheme/main/owl.carousel.min.css');
